--- a/pages/Psicologia.html
+++ b/pages/Psicologia.html
@@ -194,16 +194,6 @@
                                             </a>
                                         </div>
                                         <div class="col-lg-4 col-md-4">
-                                            <a href="pediatria.html">
-                                                <div class="card-icon mb-3">
-                                                    <img src="../img/icons/Pediatra .png" style="width: 104px;">
-                                                </div>
-                                                <div class="text-white card-text text-center">
-                                                    <button id="con-pre" class="text-white">Pediatria</button>
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="col-lg-4 col-md-4">
                                             <a href="workshop.html">
                                                 <div class="card-icon">
                                                     <img src="../img/icons/workshop.png" style="width: 100px;">
@@ -230,7 +220,7 @@
                                         A avaliação neuropsicológica é uma área Especifica da Psicologia em que é
                                         analisado o funcionamento cognitivo e
                                         comportamental de um paciente. É realizada somente por psicólogos com formação
-                                        específica em neuropsicologia. <br>
+                                        específica em neuropsicologia. <br><br>
                                         Nestas consultas utilizamos métodos de avaliação neuropsicológica fidedignos
                                         para obter um entendimento profundo do
                                         historial do paciente e o do seu actual estado mental, como Testes
@@ -445,16 +435,6 @@
                                             </a>
                                         </div>
                                         <div class="col-lg-4 col-md-4">
-                                            <a href="pediatria.html">
-                                                <div class="card-icon mb-3">
-                                                    <img src="../img/icons/Pediatra .png" style="width: 104px;">
-                                                </div>
-                                                <div class="text-white card-text text-center">
-                                                    <button id="con-pre" class="text-white">Pediatria</button>
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="col-lg-4 col-md-4">
                                             <a href="workshop.html">
                                                 <div class="card-icon">
                                                     <img src="../img/icons/workshop.png" style="width: 100px;">
@@ -568,16 +548,6 @@
                                             </a>
                                         </div>
                                         <div class="col-lg-4 col-md-4">
-                                            <a href="pediatria.html">
-                                                <div class="card-icon mb-3">
-                                                    <img src="../img/icons/Pediatra .png" style="width: 104px;">
-                                                </div>
-                                                <div class="text-white card-text text-center">
-                                                    <button id="con-pre" class="text-white">Pediatria</button>
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="col-lg-4 col-md-4">
                                             <a href="workshop.html">
                                                 <div class="card-icon">
                                                     <img src="../img/icons/workshop.png" style="width: 100px;">
@@ -678,16 +648,6 @@
                                                 </div>
                                                 <div class="text-white card-text text-center">
                                                     <button id="con-pre" class="text-white">Consultas</button>
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="col-lg-4 col-md-4">
-                                            <a href="pediatria.html">
-                                                <div class="card-icon mb-3">
-                                                    <img src="../img/icons/Pediatra .png" style="width: 104px;">
-                                                </div>
-                                                <div class="text-white card-text text-center">
-                                                    <button id="con-pre" class="text-white">Pediatria</button>
                                                 </div>
                                             </a>
                                         </div>
@@ -833,16 +793,6 @@
                                                 </div>
                                                 <div class="text-white card-text text-center">
                                                     <button id="con-pre" class="text-white">Consultas</button>
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="col-lg-4 col-md-4">
-                                            <a href="pediatria.html">
-                                                <div class="card-icon mb-3">
-                                                    <img src="../img/icons/Pediatra .png" style="width: 104px;">
-                                                </div>
-                                                <div class="text-white card-text text-center">
-                                                    <button id="con-pre" class="text-white">Pediatria</button>
                                                 </div>
                                             </a>
                                         </div>
