--- a/pages/header.html
+++ b/pages/header.html
@@ -420,7 +420,8 @@
                                         <ul class="dropdown-sec">
                                             <li><a href="curso-amamentacao-grupo.html">Curso em grupo</a></li>
                                             <li><a href="curso-amamentacao-indiv.html">Curso Individual</a></li>
-                                            <li><a href="#">Preparation for Breastfeeding in English</a></li>
+                                            <li><a href="#">Preparation for Breastfeeding in English (Brevemente)</a>
+                                            </li>
                                         </ul>
                                         <br>
                                         <span><img src="../img/icons/Exercício Fisico.png" alt="">Exercício
@@ -435,7 +436,7 @@
                                         <ul class="dropdown-sec">
                                             <li><a href="curso-prep-grupo.html">Curso em grupo</a></li>
                                             <li><a href="curso-prep-indiv.html">Curso Individual</a></li>
-                                            <li><a href="#">Pre-natal course in English</a></li>
+                                            <li><a href="#">Pre-natal course in English (Brevemente)</a></li>
                                         </ul>
                                         <br>
                                         <ul class="dropdown-sec">
