--- a/pages/teste.html
+++ b/pages/teste.html
@@ -357,7 +357,7 @@
                                         <p>são dados poucos minutos depois de realizar a recolha do sangue.
                                             <br>
                                             <span class="underline">Se for positivo</span> , quer dizer que há parasitas
-                                            no e que é necessário fazer um
+                                            no sangue e que é necessário fazer um
                                             tratamento específico.<br>
                                             <span class="underline">Se for negativo</span>, não exclui a possibilidade
                                             de que a pessoa tenha malária.<br>
