--- a/header.html
+++ b/header.html
@@ -433,7 +433,8 @@
                                         <ul class="dropdown-sec">
                                             <li><a href="pages/curso-amamentacao-grupo.html">Curso em grupo</a></li>
                                             <li><a href="pages/curso-amamentacao-indiv.html">Curso Individual</a></li>
-                                            <li><a href="#">Preparation for Breastfeeding in English</a></li>
+                                            <li><a href="#">Preparation for Breastfeeding in English (Brevemente)</a>
+                                            </li>
                                         </ul>
                                         <br>
                                         <span><img src="img/icons/Exercício Fisico.png" alt="">Exercício Físico</span>
@@ -447,7 +448,7 @@
                                         <ul class="dropdown-sec">
                                             <li><a href="pages/curso-prep-grupo.html">Curso em grupo</a></li>
                                             <li><a href="pages/curso-prep-indiv.html">Curso Individual</a></li>
-                                            <li><a href="#">Pre-natal course in English</a></li>
+                                            <li><a href="#">Pre-natal course in English (Brevemente)</a></li>
                                         </ul>
                                         <br>
                                         <ul class="dropdown-sec">
