--- a/pages/vacinacao.html
+++ b/pages/vacinacao.html
@@ -27,6 +27,11 @@
     <link rel="stylesheet" href="../css/style.css" type="text/css">
 
     <style>
+        .services__details__content {
+            background-image: none;
+            background-color: #cfdbab !important;
+        }
+
         b {
             color: #d6a294;
             font-weight: 400;
@@ -132,7 +137,7 @@
 
     <section class="services  set-bg">
         <div class="container">
-            <div class="row d-flex justify-content-center">
+            <div class="row d-flex justify-content-center mb-4">
                 <div class="col-lg-12">
                     <div class="ml-4 mr-4">
                         <div class="blog__details__text__item">
@@ -147,7 +152,6 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
             <div class="flexivel">
@@ -333,7 +337,6 @@
                                     <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
                                 </div>
                                 <ul class="list">
-                                    <li><a><i class="fa fa-check-circle"></i> Encefalite Japonesa</a></li>
                                     <li><a><i class="fa fa-check-circle"></i>Febre tifoide</a></li>
                                     <li><a><i class="fa fa-check-circle"></i>Raiva</a></li>
                                 </ul>
@@ -348,7 +351,7 @@
                         <div class="card shadow" style="background-image: url('../img/bg1.png');">
                             <div class="card-more">
                                 <div class="icon text-center p-2">
-                                    <img src="../img/icons/Vacinação.png" width="100">
+                                    <img src="../img/icons/vacina.png" width="100">
                                 </div>
                                 <p class="border-bottom text-white">N’A Clínica estão disponíveis vários tipos de
                                     vacinas. Seguimos plano vacinal do seu país de origem, incluindo vacinas
