--- a/pages/curso-prep-grupo.html
+++ b/pages/curso-prep-grupo.html
@@ -175,7 +175,7 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class=" set-bg"
-                                    style="background-color: #dfb080;height: fit-content;border-radius: 10px;padding: 20px;">
+                                    style="background-color: rgb(214 162 148);height: fit-content;border-radius: 10px;padding: 20px;">
 
                                     <div class="col-lg-10">
                                         <div class="row">
@@ -224,14 +224,14 @@
                         </div>
                         <div class="services__details__desc">
                             <div class="section-title  text-center mb-4">
-                                <h4 class=" mb-2 mt-6">Temário Curso de Preparação para a Amamentação</h3>
+                                <h4 class=" mb-2 mt-6">Temário Curso de Preparação para o Parto</h3>
                                     <span>clique em cada um dos seguintes módulos para saber mais</span>
                             </div>
                             <div class="row d-flex align-items-center ">
                                 <div class="col-lg-6 col-md-6 col-sm-6">
                                     <div class="services__item d-flex align-items-center border shadow-sm">
                                         <div class="services__item__text">
-                                            <h5>Amamentação</h5>
+                                            <h5>Preparação para o Parto</h5>
                                             <ul>
                                                 <li>
                                                     <button class="clicavel" id="M1">
@@ -353,8 +353,7 @@
                             <h5><a href="curso-amamentacao-grupo.html">Curso de Preparação para a Amamentação em
                                     grupo</a></h5>
                             <ul>
-                                <li><img src="../img/team/team 4.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
-                                <li>07 sessões de 1h30min </li>
+                                <li><img src="../img/team/team-7.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
                             </ul>
                         </div>
                     </div>
@@ -369,7 +368,6 @@
                                     Individual</a></h5>
                             <ul>
                                 <li><img src="../img/team/team-7.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
-                                <li>07 sessões de 1h30min </li>
                             </ul>
                         </div>
                     </div>
@@ -382,8 +380,7 @@
                         <div class="blog__item__text">
                             <h5><a href="curso-prep-grupo.html">Curso de Preparação para o Parto em Grupo</a></h5>
                             <ul>
-                                <li><img src="../img/team/team-5.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
-                                <li>07 sessões de 1h30min </li>
+                                <li><img src="../img/team/team-7.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
                             </ul>
                         </div>
                     </div>
