--- a/humanitario.html
+++ b/humanitario.html
@@ -123,7 +123,7 @@
                     <div class="blog__details__text ml-4 mr-4">
                         <div class="blog__details__text__item">
                             <!-- Título da Seção -->
-                            <div class="row">
+                            <div class="row mt-2">
                                 <div class="col-lg-12">
                                     <div class="section-title">
                                         <h2 class="">O nosso trabalho humanitário</h2>
@@ -131,7 +131,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class=""> <i>N’A Clínica</i> temos plena consciência de que somos privilegiados. Não
+                            <p class="mt-4"> <i>N’A Clínica</i> temos plena consciência de que somos privilegiados. Não
                                 somos,
                                 contudo,
                                 alheios ao mundo que nos rodeia e às
