--- a/pages/amament-pre-parto.html
+++ b/pages/amament-pre-parto.html
@@ -368,7 +368,7 @@
                                             </a>
                                         </div>
                                         <div class="col-lg-4 col-md-4">
-                                            <a href="pediatria.html">
+                                            <a href="pediatria-sing.html">
                                                 <div class="card-icon">
                                                     <img src="../img/icons/Pediatra .png" style="width: 104px;">
                                                 </div>
