--- a/pages/pediatria-sing.html
+++ b/pages/pediatria-sing.html
@@ -126,7 +126,7 @@
     <!-- Blog Details Section Begin -->
     <section class="blog-details spad mt-9">
         <div class="container">
-            <div class="blog__details__hero set-bg" data-setbg="../img/blog/details/APOIO-DOM.jpg">
+            <div class="blog__details__hero set-bg" data-setbg="../img/blog/details/blog-hero10.jpg">
                 <!-- <div class="row d-flex justify-content-center">
                     <div class="col-lg-7 text-center">
                         <div class="blog__hero__text">
@@ -147,7 +147,7 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 class="">Apoio ao domicílio</h2>
+                                        <h2 class="">Consulta de Pediatria</h2>
                                         <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
                                     </div>
                                 </div>
@@ -172,26 +172,28 @@
                 <div class="col-lg-12 col-md-8">
                     <div class="services__item d-flex align-items-center border shadow-sm">
                         <div class="services__item__icon">
-                            <img src="../img/icons/home.png" style="width: 80px;">
+                            <img src="../img/icons/Pediatra .png" style="width: 80px;">
                         </div>
                         <div class="services__item__text w-100">
                             <h5></h5>
                             <div class="d-flex">
                                 <div class="col-lg-6 col-md-6">
                                     <ul>
-                                        <li><a href="domicilio.html"><i class="fa fa-check-circle"></i>
-                                                Apoio ao domicílio na Amamentação</a>
+                                        <li><a href="pediatria.html#A"><i class="fa fa-check-circle"></i>
+                                                Consulta de Pediatria Pré-Natal</a>
                                         </li>
-                                        <li><a href="domicilio.html#conseferm"><i class="fa fa-check-circle"></i>
-                                                Apoio ao domicílio na
-                                                enfermagem</a>
+                                        <li><a href="pediatria.html#B"><i class="fa fa-check-circle"></i>
+                                                Consulta de Pediatria de Rotina</a>
                                         </li>
                                     </ul>
                                 </div>
                                 <div class="col-lg-6 col-md-6">
                                     <ul>
-                                        <li><a href="teste.html#A"><i class="fa fa-check-circle"></i>
-                                                Teste do pezinho ou rastreio neonatal</a>
+                                        <li><a href="pediatria.html#C"><i class="fa fa-check-circle"></i>
+                                                Consulta de Pediatria de Criança Doente</a>
+                                        </li>
+                                        <li><a href="pediatria.html#E"><i class="fa fa-check-circle"></i>
+                                                Consulta de Pediatria de Introdução Alimentar </a>
                                         </li>
                                     </ul>
                                 </div>
