--- a/pages/pediatria.html
+++ b/pages/pediatria.html
@@ -193,7 +193,7 @@
                                             </a>
                                         </div>
                                         <div class="col-lg-4 col-md-4">
-                                            <a href="pediatria.html">
+                                            <a href="pediatria-sing.html">
                                                 <div class="card-icon mb-3">
                                                     <img src="../img/icons/Pediatra .png" style="width: 104px;">
                                                 </div>
@@ -422,7 +422,7 @@
                                             </a>
                                         </div>
                                         <div class="col-lg-4 col-md-4">
-                                            <a href="pediatria.html">
+                                            <a href="pediatria-sing.html">
                                                 <div class="card-icon mb-3">
                                                     <img src="../img/icons/Pediatra .png" style="width: 104px;">
                                                 </div>
@@ -518,7 +518,7 @@
                                             </a>
                                         </div>
                                         <div class="col-lg-4 col-md-4">
-                                            <a href="pediatria.html">
+                                            <a href="pediatria-sing.html">
                                                 <div class="card-icon mb-3">
                                                     <img src="../img/icons/Pediatra .png" style="width: 104px;">
                                                 </div>
@@ -625,7 +625,7 @@
                                             </a>
                                         </div>
                                         <div class="col-lg-4 col-md-4">
-                                            <a href="pediatria.html">
+                                            <a href="pediatria-sing.html">
                                                 <div class="card-icon mb-3">
                                                     <img src="../img/icons/Pediatra .png" style="width: 104px;">
                                                 </div>
@@ -729,7 +729,7 @@
                                             </a>
                                         </div>
                                         <div class="col-lg-4 col-md-4">
-                                            <a href="pediatria.html">
+                                            <a href="pediatria-sing.html">
                                                 <div class="card-icon mb-3">
                                                     <img src="../img/icons/Pediatra .png" style="width: 104px;">
                                                 </div>
@@ -864,7 +864,7 @@
             title.textContent = "Consulta de Pediatria de Introdução Alimentar";
             mn.textContent = " A 90min";
             subtitulo.textContent = "A fase da diversificação alimentar é uma aventura que tem implicações para toda a vida!";
-            img.src = "../img/blog/details/nutrio-infant.jpg";
+            img.src = "../img/blog/details/nutri-geral-infant.jpg";
             window.scrollTo({ top: 0, behavior: 'smooth' });
         }
 
