--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@
                     <div class="blog__details__text ml-4 mr-4">
                         <div class="blog__details__text__item">
                             <!-- Título da Seção -->
-                            <div class="row">
+                            <div class="row mb-4">
                                 <div class="col-lg-12">
                                     <div class="section-title">
                                         <h2 class="">Somos a SUA aldeia</h2>
@@ -184,7 +184,6 @@
                             <div class="row">
                                 <div class="col-lg-6 mt-2 ml-4">
                                     <div class="hero__text">
-                                        <!-- <span>Bem-vindo à A Clínica</span> -->
                                         <h2>COMPREENDEMOS o papel fundamental da família e queremos fazer parte
                                             da sua! <b>Somos a sua aldeia!</b></h2>
                                     </div>
