--- a/team.html
+++ b/team.html
@@ -152,7 +152,7 @@
                     <div class="blog__details__text ml-4 mr-4">
                         <div class="blog__details__text__item">
                             <!-- Título da Seção -->
-                            <div class="row">
+                            <div class="row mb-4">
                                 <div class="col-lg-12">
                                     <div class="section-title">
                                         <h2 class="">A nossa equipa</h2>
